@@ -165,8 +165,8 @@
         <plugins.org-apache-maven-plugins.maven-enforcer-plugin>1.3
         </plugins.org-apache-maven-plugins.maven-enforcer-plugin>
         <plugins.org-apache-maven-plugins.maven-site-plugin>3.3</plugins.org-apache-maven-plugins.maven-site-plugin>
-        <plugins.org-apache-maven-plugins.maven-surefire-plugin>3.5.2</plugins.org-apache-maven-plugins.maven-surefire-plugin>
-        <plugins.org-apache-maven-plugins.maven-failsafe-plugin>3.5.2</plugins.org-apache-maven-plugins.maven-failsafe-plugin>
+        <plugins.org-apache-maven-plugins.maven-surefire-plugin>3.2.3</plugins.org-apache-maven-plugins.maven-surefire-plugin>
+        <plugins.org-apache-maven-plugins.maven-failsafe-plugin>3.2.3</plugins.org-apache-maven-plugins.maven-failsafe-plugin>
         <plugins.org-codehaus-mojo.cobertura-maven-plugin>2.7</plugins.org-codehaus-mojo.cobertura-maven-plugin>
         <org.codehaus.mojo.version>3.3.0</org.codehaus.mojo.version>
 
@@ -216,7 +216,7 @@
         <org.ehcache.version>3.3.1</org.ehcache.version>
         <org.jboss.async-http-servlet.version>3.1.0.Beta2</org.jboss.async-http-servlet.version>
         <org.jsoup.version>1.15.3</org.jsoup.version>
-        <org.junit.jupiter>5.11.4</org.junit.jupiter>
+        <org.junit.jupiter>5.10.1</org.junit.jupiter>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <org.projectlombok.lombok-mapstruct-binding.version>0.2.0</org.projectlombok.lombok-mapstruct-binding.version>
         <org.projectlombok.version>1.18.30</org.projectlombok.version>
@@ -270,6 +270,7 @@
         <tag>inugami-2.2.0</tag>
     </scm>
 
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -281,23 +282,24 @@
         </repository>
     </distributionManagement>
 
+    <!--
+        <repositories>
+            <repository>
+                <id>ossrh</id>
+                <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            </repository>
+        </repositories>
 
-    <repositories>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </pluginRepository>
-    </pluginRepositories>
-    <!-- =======================================================================
-    = DEPENDENCIES
-    ======================================================================== -->
+        <pluginRepositories>
+            <pluginRepository>
+                <id>ossrh</id>
+                <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            </pluginRepository>
+        </pluginRepositories>
+        -->
+        <!-- =======================================================================
+        = DEPENDENCIES
+        ======================================================================== -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -434,6 +436,17 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>${org.junit.jupiter}</version>
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${org.junit.jupiter}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-engine</artifactId>
+                <version>1.11.4</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
@@ -708,14 +721,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${plugins.org-apache-maven-plugins.maven-surefire-plugin}</version>
                 <configuration>
-                    <argLine>-Xmx1024M</argLine>
+                    <argLine>
+                        -Xmx1024M
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+                    </argLine>
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                     </excludes>
                 </configuration>
                 <dependencies>
-
-
                     <dependency>
                         <groupId>org.apache.maven.surefire</groupId>
                         <artifactId>maven-surefire-common</artifactId>
@@ -734,7 +749,7 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.10.1</version>
+                        <version>${org.junit.jupiter}</version>
                     </dependency>
                 </dependencies>
             </plugin>
